TapHandler: don't (dis)connect signals to a null window

This is unexpected, but we're told that it happens somehow.

Pick-to: 6.6 6.5
Fixes: QTBUG-108696
Change-Id: I738099f43003056f7a24c09b1dc36024a81cbbb1
Reviewed-by: Vladimir Belyavsky <belyavskyv@gmail.com>
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit 821f8f1f6c74b562bd984a12c959bc137dd2c11f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>